# monero-update

./: .gitmodules  CMakeLists.txt  README  appicon.rc  monero-update.qml  monero-update.qrc
cmake/: FindGPGME.cmake  FindUnbound.cmake
src/: main.cpp  pubkeys.h  updater.cpp  updater.h
src/common/: dns_utils.cpp  dns_utils.h  download.cpp  sha256sum.cpp  sha256sum.h  threadpool.cpp  updates.cpp  vercmp.cpp  vercmp.h
src/epee/include/: reg_exp_definer.h
src/epee/include/net/: http_client.h  net_helper.h  net_ssl.h  net_utils_base.h
src/epee/src/: net_ssl.cpp  net_utils_base.cpp
